# RedPsy

./: .gitignore  dataset-card.md  env.example  pyproject.toml  readme.md
data/: psychiatrist-system-prompt.txt
data/batch/: dataset-round-2-openai-1-batch_requests_6826221c0c908190b661fad8b54f9797.jsonl  dataset-round-2-openai-1-outputs_batch_6826221c0c908190b661fad8b54f9797.jsonl  dataset-round-2-openai-2-batch_requests_6826210769ac8190830c582296577a4b.jsonl  dataset-round-2-openai-2-outputs_batch_6826210769ac8190830c582296577a4b.jsonl  dataset-round-2-openai-3-batch_requests_68263143b8e88190845e8bde4488030b.jsonl  dataset-round-2-openai-3-outputs_batch_68263143b8e88190845e8bde4488030b.jsonl  dataset-round-2-openai-4-batch_requests_6826353cc4108190af78e5a337e4ec14.jsonl  dataset-round-2-openai-4-outputs_batch_6826353cc4108190af78e5a337e4ec14.jsonl  dataset-round-2-openai-5-batch_requests_682636ba946c8190b4e8a518a507c08b.jsonl  dataset-round-2-openai-5-outputs_batch_682636ba946c8190b4e8a518a507c08b.jsonl  dataset-round-3-openai-1-batch_requests_6826f3caa4d48190af887f0aa1ebfe38.jsonl  (+9 more)
data/dataset/: dataset-2.json  (+33 more)
docs/: _quarto.yml  batch-processing.qmd  cost-tracking.qmd  data.qmd  index.qmd  metrics.qmd  model-shift.qmd  regression-test.qmd  safety-evaluation.qmd
notebooks/: calc_cos_sim.ipynb  calculate-self-bleu-scores.ipynb  embed_to_cluster.ipynb  generate-dataset-2.ipynb  generate-dataset-3.ipynb  llm-rater.ipynb  merge-all.ipynb  merge_datasets.ipynb  read-batch-ratings.ipynb
script/: bootstrap  docs-api  docs-general  test
tests/: test_regression.py
(+19 files in other folders)
